@@ -1,6 +1,13 @@
+import os
+import tempfile
+
 from zope.interface import Interface
+import zc.lockfile
 from Products.Five import BrowserView
 from collective.singing.channel import channel_lookup
+
+LOCKFILE_NAME = os.path.join(tempfile.gettempdir(),
+                             __name__ + '.tick_and_dispatch')
 
 class IDancingUtilsView(Interface):
     
@@ -15,9 +22,21 @@ class IDancingUtilsView(Interface):
     
 class DancingUtilsView(BrowserView):
 
-    def tick_and_dispatch(self): 
+    def tick_and_dispatch(self):
         """ Tick all schedulers of all channels.
             Then dispatch their queues. """
+        try:
+            lock = zc.lockfile.LockFile(LOCKFILE_NAME)
+        except zc.lockfile.LockError:
+            return "`tick_and_dispatch` is locked by another process (%r)." % (
+                LOCKFILE_NAME)
+
+        try:
+            return self._tick_and_dispatch()
+        finally:
+            lock.close()
+
+    def _tick_and_dispatch(self):
         msg = u''
         for channel in channel_lookup():
             queued = status = None
