@@ -44,6 +44,7 @@ setup(name='collective.dancing',
           'plone.z3cform>=0.5.1dev',
           'plone.app.z3cform>=0.4.2',
           'five.intid',
+          'zc.lockfile',
           'StoneageHTML',
           'BeautifulSoup',
       ],
